$Id$

2.0.9-pre-1
	Added errqueue.
	Added command "show errors".
	
2.0.8
	Increased size of screen name field in buddy listing
	Fixed bug with idle times causing broken pipes.
	New libfaim
	Added the 'source' command.
        Make sure that a newline is always at the end of messages
	        returned by perl style formatting functions.
	Add owl::login and owl::auth to legacy variables populated for format_msg.
	Additions to intro.txt and advanced.txt documents.  (Still in progress.)
	Add base methods for login_host and login_tty 
	        and others that return undef.
	New API for perl message formatting functions.  
		Legacy variables are still supported for owl::format_msg
	        and owl::receive_msg, but these functions are now also 
	        passed an owl::Message object which contains methods
	        for accessing the contents of the message.  See perlwrap.pm 
		(and docs TBD) for the available methods.
		*** WARNING:  The exact API for owl::Message has
		*** not yet stabilized.
	Added "style" command for creating new styles.
	        Usage:  style <name> perl <function_name>
	Added support for "show styles".  Changed global style table
	        from list to dictionary.
	Changed AIM password prompt from "Password:" to "AIM Password:".
	Messages are reformatted after a window resize to allow styles
	        to take into account the width of the window.
	When perl throws an error, the message is put in the msgwin
	        if possible.
	Added perl functions for:	
	        owl::getcurmsg() -- returns an owl::Message object for
		                    the active message
		                    in the current view.
	        owl::getnumcols() -- returns the column width of the window
		owl::zephyr_getrealm() -- returns the zephyr realm
	        owl::zephyr_getsender() -- returns the zephyr sender
	Made owl::COMMAND("foo"); be syntactic sugar for 
	        owl::command("COMMAND foo");
	Added perlwrap.pm to contain perl code to be compiled into 